2006-06-08 Sandro Santilli <strk@refractions.net>

	* source/headers/geos/geom/CoordinateSequenceFactory.h,
	source/headers/geos/geom/GeometryComponentFilter.h,
	source/headers/geos/geom/GeometryFilter.h,
	source/headers/geos/geom/util/CoordinateOperation.h,
	source/headers/geos/geom/util/GeometryEditorOperation.h,
	source/headers/geos/geom/util/ShortCircuitedGeometryVisitor.h,
	source/headers/geos/geomgraph/NodeFactory.h,
	source/headers/geos/index/ItemVisitor.h,
	source/headers/geos/index/strtree/AbstractSTRtree.h,
	source/headers/geos/index/sweepline/SweepLineOverlapAction.h:
	Added missing virtual destructor to abstract classes.

2006-06-07 Mateusz Loskot <mateusz@loskot.net>

	* tests/unit/Makefile.am,
	tests/unit/algorithm/CGAlgorithms/isPointInRingTest.cpp:
	Added new test: CGAlgorithms/isPointInRingTest.cpp.
	* Makefile.am, configure.in,
	swig/python/Makefile.am, swig/ruby/Makefile.am,
	swig/ruby/test/Makefile.am: swig removed from automatic
	build process.
	* configure.in: removed check for boost availability.
	* configure.in: enforce -Wall -ansi -pedantic -Wno-long-long
	to C and CXX flags.

2006-06-07 Sandro Santilli <strk@refractions.net>

	* source/headers/geos/geom/Makefile.am,
	source/headers/geos/geom.h: removed
	Triangle.h from installed header set.

2006-06-05 Sandro Santilli <strk@refractions.net>

	* source/headers/geos/Makefile.am,
	source/headers/geos/geosAlgorithm.h,
	source/headers/geos/indexSweepline.h,
	source/headers/geos/nodingSnapround.h,
	source/headers/geos/opDistance.h, source/headers/geos/opOverlay.h,
	source/headers/geos/opPolygonize.h,
	source/headers/geos/opPredicate.h, source/headers/geos/opRelate.h,
	source/headers/geos/planargraph.h, source/headers/geos/util.h,
	source/headers/geos/algorithm/Makefile.am,
	source/headers/geos/geom/Makefile.am,
	source/headers/geos/geom/util/Makefile.am,
	source/headers/geos/geomgraph/Makefile.am,
	source/headers/geos/geomgraph/index/Makefile.am,
	source/headers/geos/index/Makefile.am,